<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DailyExpenseMemo</string>
    <string name="business_checkbox_label">Business</string>
    <string name="save_button_label">Save</string>
    <string name="import_menu_label">Import</string>
    <string name="menu_new_book_label">New Book</string>
    <string name="delete_label">Delete</string>
    <string name="delete_all_label">Delete All</string>
    <string name="average_label">Average</string>
    <string name="total_label">Total</string>
    <string name="prev_7_days_label">Last 7 days</string>
    <string name="prev_30_days_label">Last 30 days</string>
    <string name="all_past_label">Until yesterday</string>
    <string name="today_label">Today</string>
    <string name="yesterday_label">Yesterday</string>
    <string name="export_label">Export</string>        
</resources>